--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,7 @@ ol {
   margin-left: 25%; }
 
 .site-wrapper {
-  max-width: 1000px;
-  positon: relative; }
+  max-width: 1000px; }
 
 .logo-wrapper {
   background-color: #233139;
@@ -123,24 +122,22 @@ nav {
 .fonts {
   margin: 40px 0 0 20px; }
 
-#left {
-  height: 100%; }
-
 @media screen and (min-width: 640px) {
   .content-wrapper {
     max-width: 650px;
-    float: right;
-    margin-left: 250px;
-    position: relative; }
-
-  #left {
-    position: absolute;
-    width: 250px;
-    height: 100%; }
+    float: left;
+    margin-left: 250px; }
 
   .nav-wrapper {
     left: 0;
-    top: 0; }
+    top: 0;
+    width: 250px; }
+
+  .beFixed {
+    position: fixed; }
+
+  .beAbsolute {
+    position: absolute; }
 
   #logo {
     width: 120px;
