--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: "ff-tisa-web-pro";
+	font-family: "ff-tisa-web-pro", serif;
 	font-weight: bold;
 }
 
